# athletisync

./: .env.example  .gitignore  Changelog  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260411_0001_initial.py  20260602_0005_google_oauth_profiles.py  20260602_0006_app_settings_google_oauth.py  20260602_0007_app_settings_server_base_url.py
app/: __init__.py  config.py  dependencies.py  main.py  models.py  schemas.py  security.py
app/db/: session.py
app/integrations/: mshsaa.py
app/routes/: auth.py  catalog.py  dashboard.py  google.py  mappings.py  school_years.py  schools.py  settings.py  sync.py
app/services/: auth.py  bootstrap.py  catalog.py  event_formatting.py  google_calendar.py  mappings.py  scheduler.py  sync.py  url_helpers.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: base.html
app/templates/auth/: login.html
app/templates/catalog/: index.html
app/templates/dashboard/: index.html
app/templates/google/: index.html
app/templates/mappings/: index.html
app/templates/partials/: banner.html  mshsaa_preview.html  mshsaa_schedule.html
app/templates/school_years/: index.html
deploy/: install-server.sh
deploy/nginx/: athletisync.conf
deploy/systemd/: athletisync.service
docs/: admin-guide.md  architecture.md  development.md  environment.md  google-calendar.md  mshsaa.md  setup.md  ubuntu-deployment.md
tests/: conftest.py  test_app.py  test_event_formatting.py  test_google_calendar.py  test_mshsaa.py  test_sync_logic.py
(+4 files in other folders)
