[project]
name = "athletisync"
version = "0.1.0"
description = "Lightweight self-hosted app that syncs MSHSAA athletic schedules to Google Calendar."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "apscheduler>=3.10.4",
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "itsdangerous>=2.2.0",
  "pydantic-settings>=2.5.2",
  "pwdlib[argon2]>=0.2.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
google = [
  "google-api-python-client>=2.149.0",
  "google-auth>=2.35.0",
]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
